<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InputActivity">

    <!-- Kotak A -->

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?android:attr/windowBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/selamat_datang"
                android:textAlignment="textStart"
                android:textSize="20sp"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/njugjug"
                android:textAlignment="textEnd"
                android:textSize="24sp" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="28dp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_bibit_baru"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jenis_bibit"
        android:textAlignment="textStart"
        android:textSize="16sp" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pilih_jenis"
        android:inputType="none"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/banyaknya_bibit_dalam_kg"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/total_tanam"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/total_tanam"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tanggal_tanam"
        android:textAlignment="textStart"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/tanggal_tanam"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/tanggal_tanam"
        android:inputType="date"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        tools:ignore="VisualLintButtonSize" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="277dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@drawable/bottom_nav_menu"
        tools:ignore="VisualLintBottomNav" />

</LinearLayout>
