<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="97dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_foreground"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/uname"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/username"
        android:inputType="text"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
