<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ControlActivity">

    <!-- Kotak A -->

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?android:attr/windowBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/selamat_datang"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/njugjug"
                android:textAlignment="textEnd"
                android:textSize="24sp" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:background="@android:color/holo_blue_light"
            android:gravity="center"
            android:text="@string/a"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:text="@string/b"
            android:textColor="#000000" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:text="@string/c"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:gravity="center"
            android:text="@string/d"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/text5"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        android:text="@string/d"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:text="@string/d"
        android:textColor="#000000" />

</LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pertumbuhan"
        android:src="@drawable/ic_growth"
        tools:ignore="ImageContrastCheck" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Titik 1 -->
        <View
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@android:color/black" />

        <!-- Titik 2 -->
        <View
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@android:color/black" />

        <!-- Titik 3 -->
        <View
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@android:color/black" />

        <!-- Titik 4 -->
        <View
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@android:color/black" />

        <!-- Titik 5 -->
        <View
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:background="@android:color/black" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_weight="1" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@drawable/bottom_nav_menu" />

</LinearLayout>
