<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Kotak A -->

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?android:attr/windowBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="Selamat datang"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="Njugjug"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textA"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:gravity="center"
            android:text="@string/a"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textB"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:text="B"
            android:textColor="#000000" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textC"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:text="C"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textD"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:gravity="center"
            android:text="D"
            android:textColor="#000000" />

    </LinearLayout>
    <TextView
    android:id="@+id/latitudeTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Latitude: "
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/longitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/latitudeTextView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Longitude: " />

    <org.osmdroid.views.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="285dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Button
            android:id="@+id/buttonstartgps"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#08CF01"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/start"
            android:textAlignment="center"
            android:textColor="#4E342E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonstopgps"
            app:layout_constraintHorizontal_bias="0.848"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonstopgps"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="#F44336"
            android:text="@string/stop"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        android:visibility="invisible"
        app:menu="@drawable/bottom_nav_menu" />

</LinearLayout>
